[package]
name = "at-urls-log-stats"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
fern = { version = "0.7.1", features = ["colored"] }
log = "0.4.28"
chrono = "0.4.42"
regex-automata = "0.4.11"
futures-util = "0.3.31"
axum = "0.8.6"
prometheus-client = "0.24.0"